Target Explorer: Further agent launcher improvements